rabbitmq_traffic/rabbitmq-service.yaml
# Copyright 2018 Istio Authors
#
#   Licensed under the Apache License, Version 2.0 (the "License");
#   you may not use this file except in compliance with the License.
#   You may obtain a copy of the License at
#
#       http://www.apache.org/licenses/LICENSE-2.0
#
#   Unless required by applicable law or agreed to in writing, software
#   distributed under the License is distributed on an "AS IS" BASIS,
#   WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
#   See the License for the specific language governing permissions and
#   limitations under the License.

apiVersion: v1
kind: Service
metadata:
  name: rabbitmq-app
  labels:
    app: rabbitmq-app
spec:
  ports:
  - name: tcp
    port: 5672
 # - name: http
 #   port: 15672
  selector:
    app: rabbitmq-app
---
apiVersion: apps/v1
#kind: StatefulSet
kind: Deployment
metadata:
  name: rabbitmq-app-v1
spec:
 # serviceName: rabbitmq-app
  replicas: 1
  selector:
    matchLabels:
      app: rabbitmq-app
      version: v1
  template:
    metadata:
      labels:
        app: rabbitmq-app
        version: v1
    spec:
      containers:
      - name: rabbitmq-app
        image: rabbitmq:3.8-management
        imagePullPolicy: IfNotPresent
        ports:
         # - containerPort: 15672
          - containerPort: 5672
---
apiVersion: apps/v1
#kind: StatefulSet
kind: Deployment
metadata:
  name: rabbitmq-app-v2
spec:
#  serviceName: rabbitmq-app
  replicas: 1
  selector:
    matchLabels:
      app: rabbitmq-app
      version: v2
  template:
    metadata:
      labels:
        app: rabbitmq-app
        version: v2
    spec:
      containers:
      - name: rabbitmq-app
        image: rabbitmq:3.8-management
        imagePullPolicy: IfNotPresent
        ports:
        - containerPort: 5672
        # - containerPort: 15672
